Fixed Overflow X

--- a/css/user.scss
+++ b/css/user.scss
@@ -55,6 +55,7 @@ body{
   font-size: $smallText;
   color: $primaryColor;
   background-color: $bgColor;
+  overflow-x: hidden;
 }
 
 #wrapper{
